k8s-manifests/cast-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cast-service
  labels:
    app: cast-service
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cast-service
  template:
    metadata:
      labels:
        app: cast-service
        tier: backend
    spec:
      containers:
        - name: cast-service
          image: newemira/cast-service:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: cast-service-volume
              mountPath: /data/
      volumes:
        - name: cast-service-volume
          persistentVolumeClaim:
            claimName: cast-service-pvc
