k8s-manifests/movie-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: movie-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-db
  template:
    metadata:
      labels:
        app: movie-db
    spec:
      containers:
      - name: movie-db
        image: postgres:12.1-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: movie-db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: movie-db-data
        persistentVolumeClaim:
          claimName: movie-db-pvc
