k8s-manifests/movie-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-service 
  labels:
    app: movie-service
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-service
  template:
    metadata:
      labels:
        app: movie-service
    spec:
      containers:
        - args:
            - uvicorn
            - movie.app.main:app
            - --reload
            - --host
            - 0.0.0.0
            - --port
            - "8000"
          image: newemira/movie-service:latest
          name: movie-service
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /data/
              name: movie-service-pv
      restartPolicy: Always
      volumes:
        - name: movie-service-pv
          persistentVolumeClaim:
            claimName: movie-service-pvc
