k8s-manifests/cast-service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: cast-db-service
spec:
  selector:
    app: cast-db
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
