k8s-manifests/cast-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cast-service
  labels:
    app: cast-service
spec:
  type: ClusterIP
  ports:
    - port: 8000  # Port du service interne
      targetPort: 8000  # Port utilisé par le conteneur
      protocol: TCP
  selector:
    app: cast-service
