k8s-manifests/movie-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-db-service
spec:
  selector:
    app: movie-db
  ports:
  - port: 5432
    targetPort: 5432
