k8s-manifests/movie-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: movie-service
  labels:
    app: movie-service
spec:
  type: NodePort
  ports:
    - port: 8000  # Port du service interne
      targetPort: 8000  # Port utilisé par le conteneur
      protocol: TCP
      nodePort: 30003
  selector:
    app: movie-service
