k8s-manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: app.devops-emi.cloudns.ch
    http:
      paths:
      - path: /api/v1/movies
        pathType: Prefix
        backend:
          service:
            name: movie-service
            port:
              number: 8002
      - path: /api/v1/casts
        pathType: Prefix
        backend:
          service:
            name: cast-service
            port:
              number: 8001
